placement of UI icons and text

--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    
+    <!-- CONTENT WRAPPER -->
+    <div id="content-wrapper">
+        <section class="full-height px-lg-5">
+
+            <div class="row text-center mb-4">
+                <h1>Rock Paper Scissors Game</h1>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 icon-container d-flex gap-4 p-4">
+                        <div class="card-custom">
+                            <img class ="card-custom-image" src="./assets/images/rock.jpg">
+                            <p class="h3 text-center p-4">Rock</p>
+                        </div>
+                        <div class="card-custom">
+                            <img class ="card-custom-image" src="./assets/images/paper.jpg">
+                            <p class="h3 text-center p-4">Paper</p>
+                        </div>
+                        <div class="card-custom">
+                            <img class ="card-custom-image" src="./assets/images/scissors.jpg">
+                            <p class="h3 text-center p-4">Scissors</p>
+                        </div>                    
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </div>
+    <!-- //CONTENT WRAPPER-->
+
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/aos.js"></script>
     <script src="./assets/js/script.js"></script>
