updated images and added outcome container with text placement

--- a/index.html
+++ b/index.html
@@ -23,20 +23,26 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 icon-container d-flex gap-4 p-4">
-                        <div class="card-custom">
-                            <img class ="card-custom-image" src="./assets/images/rock.jpg">
+                        <div class="card-custom rounded-4">
+                            <img class ="card-custom-image" src="./assets/images/rock-removebg-removebg-preview.png">
                             <p class="h3 text-center p-4">Rock</p>
                         </div>
-                        <div class="card-custom">
-                            <img class ="card-custom-image" src="./assets/images/paper.jpg">
+                        <div class="card-custom rounded-4">
+                            <img class ="card-custom-image" src="./assets/images/paper-removebg-removebg-preview.png">
                             <p class="h3 text-center p-4">Paper</p>
                         </div>
-                        <div class="card-custom">
-                            <img class ="card-custom-image" src="./assets/images/scissors.jpg">
+                        <div class="card-custom rounded-4">
+                            <img class ="card-custom-image" src="./assets/images/scissors-removebg-preview.png">
                             <p class="h3 text-center p-4">Scissors</p>
                         </div>                    
                     </div>
                 </div>
+            </div>
+
+            <div class="container text-center p-4 bg-dark rounded-4">
+                <p class="h5 p-1">Your choice: Rock</p>
+                <p class="h5 p-1">Computer choice: Scissors</p>
+                <p class="h4 p-1">You won! Rock beats Scissors</p>
             </div>
 
         </section>
