--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
     <div id="content-wrapper">
         <section class="full-height px-lg-5">
 
-            <div class="row text-center mb-4">
+            <div class="h2 row text-center mb-4">
                 <h1>Rock Paper Scissors Game</h1>
             </div>
 
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 icon-container d-flex gap-4 p-4">
-                        <div class="card-custom rounded-4">
+                        <div class="card-custom rounded-4 d-flex flex-column justify-content-center align-items-center">
                             <img class ="card-custom-image" src="./assets/images/rock-removebg-removebg-preview.png">
-                            <p class="h3 text-center p-4">Rock</p>
+                            <button class="css-button-fully-rounded--grey m-4">Rock</button>
                         </div>
-                        <div class="card-custom rounded-4">
+                        <div class="card-custom rounded-4 d-flex flex-column justify-content-center align-items-center">
                             <img class ="card-custom-image" src="./assets/images/paper-removebg-removebg-preview.png">
-                            <p class="h3 text-center p-4">Paper</p>
+                            <button class="css-button-fully-rounded--grey m-4">Paper</button>
                         </div>
-                        <div class="card-custom rounded-4">
+                        <div class="card-custom rounded-4 d-flex flex-column justify-content-center align-items-center">
                             <img class ="card-custom-image" src="./assets/images/scissors-removebg-preview.png">
-                            <p class="h3 text-center p-4">Scissors</p>
+                            <button class="css-button-fully-rounded--grey m-4">Scissors</button>
                         </div>                    
                     </div>
                 </div>
             </div>
 
-            <div class="container text-center p-4 bg-dark rounded-4">
-                <p class="h5 p-1">Your choice: Rock</p>
-                <p class="h5 p-1">Computer choice: Scissors</p>
-                <p class="h4 p-1">You won! Rock beats Scissors</p>
+            <div id="output" class="container text-center p-4 rounded-4">
+                <p id="player" class="h5 p-1">Your choice: Rock</p>
+                <p id="computer" class="h5 p-1">Computer choice: Scissors</p>
+                <p id="outcome" class="h4 p-1">You won! Rock beats Scissors</p>
             </div>
 
         </section>
