--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
     <div id="content-wrapper">
         <section class="full-height px-lg-5">
 
-            <div class="h2 row text-center mb-4">
+            <div class="h2 row text-center mb-2">
                 <h1>Rock Paper Scissors Game</h1>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 d-flex justify-content-center">
+                        <button onclick="playRound(playerSelection, computerSelection)" class="css-button-fully-rounded--grey m-4">1 Round</button>
+                        <button onclick="game()"class="css-button-fully-rounded--grey m-4">5 Rounds</button>
+                    </div>
+                </div>
             </div>
 
             <div class="container">
