--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
 
             <div id="output" class="container text-center p-4 rounded-4">
+                <h2>First to score 5 points wins</h2>
                 
             </div>
 
