added template for score function

--- a/index.html
+++ b/index.html
@@ -40,9 +40,20 @@
                 </div>
             </div>
 
+            <div class="container">
+                <div class="row">
+                    <div class="description d-flex justify-content-between px-4">
+                        <h2>First to score 5 points wins</h2>
+                    <div class=""> 
+                        <p class="px-3">SCORE 123</p>
+                        <p class="px-3">SCORE 123</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
             <div id="output" class="container text-center p-4 rounded-4">
-                <h2>First to score 5 points wins</h2>
-                
+                   
             </div>
 
         </section>
