--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <div class="row">
                     <div class="description d-flex justify-content-between px-4">
                         <h2>First to score 5 points wins</h2>
-                    <div class=""> 
-                        <p class="px-3">SCORE 123</p>
-                        <p class="px-3">SCORE 123</p>
+                    <div class="text-end"> 
+                        <h5 class="px-3 mb-2">Player: 3</h5>
+                        <h5 class="px-3">Computer: 2</h5>
                     </div>
                     </div>
                 </div>
