--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
                 <div class="row">
                     <div class="description d-flex justify-content-between px-4">
                         <h2>First to score 5 points wins</h2>
-                    <div class="text-end"> 
-                        <h5 class="px-3 mb-2">Player: 3</h5>
-                        <h5 class="px-3">Computer: 2</h5>
                     </div>
+                    <div id="score" class="text-end d-flex justify-content-between"> 
+                        <h5 id="player-score" class="px-3 mx-3">Player: 3</h5>
+                        <h5 id="computer-score" class="px-3 mx-4">Computer: 2</h5>
                     </div>
+                    
                 </div>
             </div>
 
