--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
             </div>
 
             <div class="container">
-                <div class="row">
+                <div class="row score">
                     <div class="description d-flex justify-content-between px-4">
                         <h2>First to score 5 points wins</h2>
                     </div>
                     <div id="score" class="text-end d-flex justify-content-between"> 
-                        <h5 id="player-score" class="px-3 mx-3">Player: 3</h5>
-                        <h5 id="computer-score" class="px-3 mx-4">Computer: 2</h5>
+                        
                     </div>
                     
                 </div>
