--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             </div>
 
             <div class="container">
-                <div class="row score">
-                    <div class="description d-flex justify-content-between px-4">
-                        <h2>First to score 5 points wins</h2>
+                <div class="row score text-center">
+                    <div class="px-4">
+                        <h1 id="first" class="px-5 mt-5 text-center">First to score 5 points wins</h1>
                     </div>
                     <div id="score" class="text-end d-flex justify-content-between"> 
                         
