--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
     <div id="content-wrapper">
         <section class="full-height px-lg-5">
 
-            <div class="h2 row text-center mb-2">
+            <div class="h2 row text-center">
                 <h1>Rock Paper Scissors Game</h1>
             </div>
 
 
-            <div class="container">
+            <div class="container cards">
                 <div class="row">
                     <div class="col-lg-12 icon-container d-flex gap-4 p-4">
                         <div id="rock" class="card-custom rounded-4 d-flex flex-column justify-content-center align-items-center">
-                            <img class ="card-custom-image" src="./assets/images/rock-removebg-removebg-preview.png">
+                            <img class ="card-custom-image p-4" src="./assets/images/rock-removebg-removebg-preview.png">
                             <button id="btn1" class="css-button-fully-rounded--grey m-4">Rock</button>
                         </div>
                         <div id="paper" class="card-custom rounded-4 d-flex flex-column justify-content-center align-items-center">
-                            <img class ="card-custom-image" src="./assets/images/paper-removebg-removebg-preview.png">
+                            <img class ="card-custom-image p-4" src="./assets/images/paper-removebg-removebg-preview.png">
                             <button id="btn2" class="css-button-fully-rounded--grey m-4">Paper</button>
                         </div>
                         <div id="scissors" class="card-custom rounded-4 d-flex flex-column justify-content-center align-items-center">
-                            <img class ="card-custom-image" src="./assets/images/scissors-removebg-preview.png">
+                            <img class ="card-custom-image p-4" src="./assets/images/scissors-removebg-preview.png">
                             <button id="btn3" class="css-button-fully-rounded--grey m-4">Scissors</button>
                         </div>                    
                     </div>
